add_library(vector_type vector_type.c vector_type.h)
add_library(string_type string_type.c string_type.h)
add_library(hash_table hash_table.c hash_table.h)
add_library(set_type set_type.c set_type.h)
add_library(queue_type queue_type.c queue_type.h)
add_library(binary_tree binary_tree.c binary_tree.h)