set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable(${PROJECT_NAME}_test test.c)
target_link_libraries(${PROJECT_NAME}_test PRIVATE ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR})

add_test(NAME Vector_Test COMMAND ${PROJECT_NAME}_test 100 -v)
add_test(NAME Hash_Test COMMAND ${PROJECT_NAME}_test 100 --hash)
add_test(NAME Set_Test COMMAND ${PROJECT_NAME}_test 100 --set)
add_test(NAME Hash_Vector_Test COMMAND ${PROJECT_NAME}_test 100 --hash_vector)
add_test(NAME Binary_Tree_Test COMMAND ${PROJECT_NAME}_test 100 --binary_tree)
add_test(NAME Thread_Test COMMAND ${PROJECT_NAME}_test 100 -v --hash --set --hash_vector --binary_tree)